test/should-fail/illegal-predicate-method-defn/exe.dk
// -*- mode: C++; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass o1
{
  method object-t empty?(object-t self)
  {
    return self;
  }
}

int-t main()
{
  return 0;
}
